tests/baselines/reference/scopingInCatchBlocks.errors.txt
==== tests/cases/compiler/scopingInCatchBlocks.ts (1 errors) ====
    try { } catch(ex1) { 
        throw ex1;
    }
    
    try { } catch(ex1) { } // should not error
    
    try { } catch(ex1) { } // should not error
    
    var x = ex1; // should error
            ~~~
!!! scopingInCatchBlocks.ts(9,9): error TS2095: Could not find symbol 'ex1'.
    